--- a/README
+++ b/README
@@ -7,10 +7,12 @@ Licensed under the terms of the GPL v2
 Buteo is a simple web-based system monitor written in Python. It uses the
 powerful Werkzeug WSGI utility collection and the Jinja2 template engine.
 
-Installation
-============
+At the moment only Linux systems are supported.
 
-In order to install Buteo you have to install the Werkzeug and Jinja2 modules
+Required modules
+================
+
+In order to use Buteo you have to install the Werkzeug and Jinja2 modules
 first. If you have setuptools (http://pypi.python.org/pypi/setuptools)
 installed just do:
 
@@ -21,20 +23,37 @@ Otherwise have a look at http://werkzeug.pocoo.org/ and http://jinja.pocoo.org/2
 First run
 =========
 
-For testing purposes a simple web server is included. To start the test server
-use the manage.py script:
+You can run Buteo also without a complete installation. For testing purposes a simple
+web server is included. To start the test server use the manage-buteo.py script:
 
-    $ python manage.py runserver
+    $ python manage-buteo.py runserver
     
-Run the manage.py script without command line arguments to get more detailed
-usage information.
+Run the manage-buteo.py script with the -h option to get more detailed usage
+information.
 
-It is not recommended to use the built-in web server in production environments.
-Configure your system's web server to run Buteo via CGI, FastCGI oder mod_wsgi.
+Installation
+============
+
+For a persistent installation use the setup.py script:
+
+    # python setup.py install
+
+Now all files and the management script are installed in your system:
+
+    $ manage-buteo.py runserver
 
 Configuration
 =============
 
-Have a look at the buteo.cfg file to configure Buteo. For example it's possible
-to activate authentication, change the template, activate vnStat information or
-to define a refresh interval.
+Have a look at the /etc/buteo.cfg file to configure Buteo. For example it's
+possible to activate authentication, change the template, activate vnStat
+information or to define a refresh interval.
+
+Production environment
+======================
+
+It's not recommended to use the built-in web server in production environments.
+
+Configure your system's web server to run Buteo via CGI, FastCGI oder mod_wsgi
+(Apache). Example scripts for a web server setup can be found in the scripts folder.
+See http://werkzeug.pocoo.org/documentation/0.5/deployment/ for further explanation.
