--- a/TODO
+++ b/TODO
@@ -16,4 +16,4 @@ Future plans:
  - Services status plugin
  - Quota information plugin
  - Localization
- - Documentation
+ - Documentation (Sphinx?)
