--- a/README
+++ b/README
@@ -1,45 +1,57 @@
 Buteo System Monitor
 ====================
 
-Copyright (c) 2009 Christian Hans
+Copyright (c) 2010 Christian Hans
 Licensed under the terms of the GPL v2
 
-Buteo is a simple web-based system monitor written in Python. It uses the
-powerful Werkzeug WSGI utility collection and the Jinja2 template engine.
+Buteo is a simple web-based system monitor written in Python. It displays all
+relevant information about your system on a single web page. Buteo is fast,
+easy-to-use and it can easily be extended with your own plugins. By default
+Buteo is supplied with a lot of plugins, like a plugin for network details or a
+plugin that lists vnStat data.
 
-At the moment only Linux systems are supported.
+Requirements
+============
 
-Required modules
-================
+Currently Buteo only supports Linux systems. In order to use Buteo a recent
+version of Python 2.x is required. Python should normally be supplied by your
+distribution, unless you have a minimalist Linux installation.
 
-In order to use Buteo you have to install the Werkzeug and Jinja2 modules first.
-If you have setuptools (http://pypi.python.org/pypi/setuptools) installed just
-do:
+Besides the Werkzeug and Jinja2 python modules have to be installed. If you have
+setuptools on your system just do:
 
     # easy_install werkzeug jinja2
-    
-Otherwise have a look at http://werkzeug.pocoo.org/ and http://jinja.pocoo.org/2/
-    
+
 First run
 =========
 
-You can run Buteo also without a complete installation. For testing purposes a
-simple web server is included. To start the test server use the manage-buteo.py
-script:
+Running Buteo is possible without a complete installation. For testing purposes
+a simple web server is included. To start the test server use the
+manage-buteo.py script:
 
     $ python manage-buteo.py runserver
     
-Run the manage-buteo.py script with the -h option to get more detailed usage
+If you run Buteo e.g. on a server and you want to access the web service from
+outside, you have to bind the web server to a hostname. To do this, specify with
+the -h option a hostname (e.g. the IP or the domain over which your machine is
+reachable).
+
+    $ python manage-buteo.py runserver -h yourdomain.com
+
+Run the manage-buteo.py script with the --help option to get more detailed usage
 information.
 
 Installation
 ============
 
-For a persistent installation use the setup.py script:
+Although a installation isn't necessary, a persistent installation might be
+considered for production environments. Just use the supplied setup.py script:
 
     # python setup.py install
 
-Now all required files and the management script are installed on your system:
+The plugins, templates and and server scripts will be installed to
+/usr/share/buteo. The configuration file is located then at /etc/buteo.cfg.
+After installation the manage-buteo.py script can be used system-wide:
 
     $ manage-buteo.py runserver
 
@@ -53,11 +65,15 @@ information or to define a refresh interval.
 Production environment
 ======================
 
-It's not recommended to use the built-in web server in production environments.
+It's not recommended to use the built-in web server in larger production
+environments. For few traffic, the built-in web server is completely fine. To
+run the Buteo web server in background, simply use the nohup command:
 
-Configure your system's web server to run Buteo via CGI, FastCGI oder mod_wsgi
-(Apache). Example scripts for a web server setup can be found in 
-/usr/share/buteo/scripts.
+    nohup python manage-buteo.py runserver &
 
-See http://werkzeug.pocoo.org/documentation/0.5/deployment/ for further
-explanation.
+But if you expect more traffic, configure your system's web server to run Buteo
+via CGI, FastCGI oder mod_wsgi (Apache). Example scripts for a web server setup
+can be found in the scripts/ folder.
+
+For further details refer to the Werkzeug documentation at:
+http://werkzeug.pocoo.org/documentation/
